make own file for public computers scss, fix spacing

--- a/themes/computer-lab/source/css/pages/_home.scss
+++ b/themes/computer-lab/source/css/pages/_home.scss
@@ -304,75 +304,3 @@ section.divider {
     color: black;
   }
 }
-
-#public-computers{
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  resize: vertical;
-  overflow: auto;
-  height: 100%;
-
-  @media (max-width: $tablet) {
-    padding: $base-spacing * 4 0 $base-spacing * 6 0;
-  }
-  h2.section-title{
-    @media (max-width: $tablet) {
-      padding-left: 0px;
-      padding-top:0px;
-    }
-    color: #000000;
-    padding-top: 60px;
-    padding-left: 150px;
-    padding-bottom: 0px;
-    font-size: 210%;
-  }
-
-  h3.section-title {
-    @media (max-width: $tablet) {
-      padding-left: 0px;
-    }
-    color: #000000;
-    padding-left: 150px;
-    padding-bottom: 10px;
-    font-size:170%;
-  }
-  ul {
-    @media (max-width: $tablet) {
-      padding-left: 39px;
-    }
-    padding-bottom: 30px;
-    padding-left: 175px;
-  }
-
-  li{
-
-    line-height: 1.8em; 
-  }
-  a{
-    color: $brand;
-    text-align: center;
-    font-size: 95%;
-  }
-
-  a:hover {
-    color: $grey;
-  }
-  p{
-    font-size: 95%;
- }
-
-
-  p.more, p.moreinfo{
-    @media (max-width: $tablet) {
-      padding-left: 0px;
-    }
-    font-size:135%;
-    padding-left: 150px;
-}
-  a.more{
-      font-size:100%;
-
-}
-}
